<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="277dp"
            android:layout_height="64dp"
            android:background="@color/colorPrimary"
            >

            <TextView
                android:id="@+id/alert_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:text="@string/sure_text"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alert_text_view"
                android:layout_marginStart="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/confirm_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alert_text_view"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimary"
                android:text="@string/cancel_text"
                android:textColor="@android:color/white"

                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>